--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@gitee.com:herowyd1994/yd-utils.git"
+        "url": "https://gitee.com/herowyd1994/yd-r-hooks.git"
     },
     "author": "~Wyd丶",
     "license": "ISC",
