build: 代码仓库迁移

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://gitee.com/herowyd1994/yd-r-hooks.git"
+        "url": "git@github.com:herowyd1994/yd-r-hooks.git"
     },
     "author": "~Wyd丶",
     "license": "ISC",
     "dependencies": {
-        "@yd/utils": "https://gitee.com/herowyd1994/yd-utils.git"
+        "@yd/utils": "https://github.com/herowyd1994/yd-utils.git"
     },
     "devDependencies": {
         "@types/node": "^20.11.30",
