--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-    "arrowParens": "always",
+    "arrowParens": "avoid",
     "bracketSameLine": false,
     "bracketSpacing": true,
     "semi": true,
@@ -8,12 +8,12 @@
     "jsxSingleQuote": true,
     "quoteProps": "as-needed",
     "trailingComma": "none",
-    "singleAttributePerLine": true,
+    "singleAttributePerLine": false,
     "htmlWhitespaceSensitivity": "css",
     "vueIndentScriptAndStyle": true,
-    "proseWrap": "preserve",
+    "proseWrap": "always",
     "insertPragma": true,
-    "printWidth": 100,
+    "printWidth": 120,
     "requirePragma": false,
     "tabWidth": 4,
     "useTabs": false,
