feat: 添加打包文件

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "@yd/r-hooks",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "## react工具库",
-    "main": "index.ts",
+    "main": "dist/index.js",
+    "types": "types/index.d.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
@@ -16,8 +17,9 @@
         "@yd/utils": "https://github.com/herowyd1994/yd-utils.git"
     },
     "devDependencies": {
-        "@types/node": "^20.11.30",
-        "@types/react": "^18.2.67",
-        "prettier": "^3.2.5"
+        "@types/node": "^22.8.6",
+        "prettier": "^3.3.3",
+        "typescript": "^5.6.3",
+        "@types/react": "^18.3.12"
     }
 }
