--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,17 @@
 {
     "compilerOptions": {
         "target": "esnext",
-        "moduleResolution": "node"
-    }
+        "moduleResolution": "node",
+        "outDir": "dist",
+        "removeComments": true,
+        "declaration": true,
+        "declarationDir": "types"
+    },
+    "exclude": [
+        "node_modules",
+        "**/*.d.ts"
+    ],
+    "include": [
+        "src/**/*"
+    ]
 }
