--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "@yd/utils": "https://github.com/herowyd1994/yd-utils.git"
     },
     "devDependencies": {
-        "@types/node": "^22.8.6",
+        "@types/node": "^22.9.1",
+        "@types/react": "^18.3.12",
         "prettier": "^3.3.3",
-        "typescript": "^5.6.3",
-        "@types/react": "^18.3.12"
+        "typescript": "^5.6.3"
     }
 }
