--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
     "compilerOptions": {
-        "target": "esnext",
+        "target": "ES5",
         "moduleResolution": "node",
         "outDir": "dist",
         "removeComments": true,
         "declaration": true,
-        "declarationDir": "types"
     },
     "exclude": [
         "node_modules",
