--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "moduleResolution": "node",
         "outDir": "dist",
         "removeComments": true,
-        "declaration": true,
+        "declaration": true
     },
     "exclude": [
         "node_modules",
