--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
         "removeComments": true,
         "declaration": true
     },
-    "exclude": [
-        "node_modules",
-        "**/*.d.ts"
-    ],
     "include": [
         "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
     ]
 }
