--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@github.com:herowyd1994/yd-r-hooks.git"
+        "url": "https://github.com/herowyd1994/yd-r-hooks.git"
     },
     "author": "~Wyd丶",
     "license": "ISC",
